crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__mutation_tests__negative__experimental_insert_artist_missing_column.snap
---
source: crates/tests/databases-tests/src/postgres/mutation_tests.rs
expression: result
---
{
  "message": "Invalid request",
  "details": {
    "detail": "Unable to mutate 'Artist'. Column 'ArtistId' is missing."
  }
}
