crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__mutation_tests__negative__experimental_insert_custom_dog_missing_column.snap
---
source: crates/tests/databases-tests/src/postgres/mutation_tests.rs
expression: result
---
{
  "message": "Invalid request",
  "details": {
    "detail": "Unable to mutate 'custom_dog'. Column 'height_cm' is missing."
  }
}
