crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__mutation_tests__negative__experimental_insert_custom_dog_predicate_fail.snap
---
source: crates/tests/databases-tests/src/postgres/mutation_tests.rs
expression: result
---
{
  "message": "Constraint not met",
  "details": {
    "detail": "Mutation constraint failed."
  }
}
