crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__mutation_tests__negative__insert_artist_album_bad.snap
---
source: crates/tests/databases-tests/src/postgres/mutation_tests.rs
expression: result
---
[
  {
    "message": "Constraint not met",
    "details": "error returned from database: duplicate key value violates unique constraint \"PK_Album\""
  },
  [
    {
      "rows": []
    }
  ]
]
