crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__mutation_tests__negative__v2_insert_custom_dog_predicate_fail.snap
---
source: crates/tests/databases-tests/src/postgres/mutation_tests.rs
expression: result
---
{
  "message": "Mutation constraint failed.",
  "details": null
}
