crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__mutation_tests__negative__v2_insert_enum_invalid_label.snap
---
source: crates/tests/databases-tests/src/postgres/mutation_tests.rs
expression: result
---
{
  "message": "Unprocessable content",
  "details": "error returned from database: invalid input value for enum card_suit: \"horses\""
}
